--- a/templates/hello.html
+++ b/templates/hello.html
@@ -14,7 +14,7 @@
             <p class="fs-5">
                 It is nice to meet you!
             </p>
-            <a href="{{ url_for('landingPage.index') }}" class="btn btn-primary btn-lg px-4 gap-3">Back home</a>
+            <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg px-4 gap-3">Back home</a>
           </div>
      </main>      
    </body>
