Auto stash before merge of "main" and "origin/main"

--- a/templates/add.html
+++ b/templates/add.html
@@ -145,7 +145,7 @@
 		<section class = "section">
 			<h2 class="title">ADD</h2>
 			<div class="container">
-				<form action="" class="form grid">
+				<form name = "form" action="" class="form grid">
 					<div class="inputs grid">
 						<div class="contact_content">
 							<label for ="" class="label_">Name</label>
@@ -179,7 +179,7 @@
 							<span class="validity"></span>
 						</div>
 						<div>
-							<a href="" class="button" onclick="add()">
+							<a name = "submit" href="" class="button" onclick="add()">
 								Submit
 							</a>
 						</div>
